--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 0x00-html_advanced/site.webmanifest
 0x00-html_advanced/android-chrome-192x192.png
-*.png
 0x00-html_advanced/browserconfig.xml
 0x00-html_advanced/favicon_default.jpg
 0x00-html_advanced/favicon.ico
 0x00-html_advanced/safari-pinned-tab.svg
+0x00-html_advanced/mstile-150x150.png
+0x00-html_advanced/logo-black.png
