--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 0x00-html_advanced/safari-pinned-tab.svg
 0x00-html_advanced/mstile-150x150.png
 0x00-html_advanced/logo-black.png
+0x03-responsive_design/00-index.html
+0x03-responsive_design/00-styles.css
