--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 0x00-sass_scss/0-debug_log.css
 0x00-sass_scss/1-color_variable.css
 0x00-sass_scss/2-color_variables.css
+0x00-sass_scss/3-nested_tag.css
