ADD: 4-nested_class.scss

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 0x00-sass_scss/1-color_variable.css
 0x00-sass_scss/2-color_variables.css
 0x00-sass_scss/3-nested_tag.css
+0x00-sass_scss/4-nested_class.css
