ADD: 5-nested_child.scss

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 0x00-sass_scss/2-color_variables.css
 0x00-sass_scss/3-nested_tag.css
 0x00-sass_scss/4-nested_class.css
+0x00-sass_scss/5-nested_child.css
