--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 0x00-sass_scss/3-nested_tag.css
 0x00-sass_scss/4-nested_class.css
 0x00-sass_scss/5-nested_child.css
+0x00-sass_scss/6-nested_hover.css
