ADD: 7-nested_deeper.scss

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 0x00-sass_scss/4-nested_class.css
 0x00-sass_scss/5-nested_child.css
 0x00-sass_scss/6-nested_hover.css
+0x00-sass_scss/7-nested_deeper.css
