--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 0x00-sass_scss/5-nested_child.css
 0x00-sass_scss/6-nested_hover.css
 0x00-sass_scss/7-nested_deeper.css
+0x00-sass_scss/8-mixin_margins.css
