--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 0x00-sass_scss/6-nested_hover.css
 0x00-sass_scss/7-nested_deeper.css
 0x00-sass_scss/8-mixin_margins.css
+0x00-sass_scss/9-extend_list.css
