ADD: 11-loop_photos.scss

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 0x00-sass_scss/10-import_colors.css
 0x00-sass_scss/10-colors.scss
 0x00-sass_scss/10-colors.css
+0x00-sass_scss/11-photos.css
+0x00-sass_scss/11-photos.scss
+0x00-sass_scss/11-loop_photos.css
