--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@
 0x00-sass_scss/11-photos.scss
 0x00-sass_scss/11-loop_photos.css
 0x00-sass_scss/12-loop_header.css
+0x01-flexbox/images/pic-about-01.jpg
+0x01-flexbox/images/pic-article-01.jpg
+0x01-flexbox/images/pic-article-02.jpg
+0x01-flexbox/images/pic-article-03.jpg
+0x01-flexbox/images/pic-person-01.jpg
+0x01-flexbox/images/pic-person-02.jpg
+0x01-flexbox/images/pic-person-03.jpg
+0x01-flexbox/images/pic-work-01.jpg
+0x01-flexbox/images/pic-work-02.jpg
+0x01-flexbox/images/pic-work-03.jpg
