--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 0x01-flexbox/images/pic-work-01.jpg
 0x01-flexbox/images/pic-work-02.jpg
 0x01-flexbox/images/pic-work-03.jpg
+0x02-form/00-article.html
+0x02-form/00-styles.css
